@@ -3,7 +3,7 @@ This is the riddling project
 The idea is to create a collection of many riddles for your enjoyment.
 
 Tools include: make, pdflatex, lacheck, latex, dvips, ps2pdf, latex2html, perl, sketch, git,
-	flexpaper, pdf2swf and possibly more.
+	flexpaper, pdf2swf, qpdf, pdfinfo, pdftex, pdftohtml, luatex, xetex and possibly more.
 
 If you want to see the result checkout:
 http://veltzer.net/blog/riddling/
