@@ -7,6 +7,7 @@ converting latex to html
 converting latex to pdf
 =======================
 1) pdflatex - seems to work but has problems with the sketch images.
+	pdflatex shows sections but not \tableofcontents if you run it once.
 2) latex -> dvi -> ps -> pdf
 	using latex(1), dvips(1), ps2pdf(1)
 	This seems to produce shorter output than 'pdflatex' and also handles images properly.
