@@ -3,5 +3,4 @@
 # this scrip will install all the required packages that you need on
 # ubuntu to compile and work with this package.
 
-sudo apt-get install lacheck latex2html sketch texlive-latex-base swftools texlive-binaries ghostscript
-sudo apt-get install sketch-doc
+sudo apt-get install lacheck latex2html sketch texlive-latex-base swftools texlive-binaries ghostscript qpdf sketch-doc poppler-utils luatex
