@@ -22,13 +22,13 @@ def bottle {
 	def t22 (tt,h,tt)
 	def t21 (tt,h,-tt)
 
-	polygon[opacity=0.5,cull=false](b11)(b12)(b22)(b21)
-	polygon[opacity=0.5,cull=false](t11)(t12)(t22)(t21)
+	polygon[fill opacity=0.5,cull=false](b11)(b12)(b22)(b21)
+	polygon[fill opacity=0.5,cull=false](t11)(t12)(t22)(t21)
 
-	polygon[opacity=0.5,cull=false](b11)(b12)(t12)(t11)
-	polygon[opacity=0.5,cull=false](b12)(b22)(t22)(t12)
-	polygon[opacity=0.5,cull=false](b22)(b21)(t21)(t22)
-	polygon[opacity=0.5,cull=false](b21)(b11)(t11)(t21)
+	polygon[fill opacity=0.5,cull=false](b11)(b12)(t12)(t11)
+	polygon[fill opacity=0.5,cull=false](b12)(b22)(t22)(t12)
+	polygon[fill opacity=0.5,cull=false](b22)(b21)(t21)(t22)
+	polygon[fill opacity=0.5,cull=false](b21)(b11)(t11)(t21)
 }
 
 def axes {
@@ -42,7 +42,12 @@ def axes {
 	line [linewidth=.2pt,linecolor=blue,linestyle=dashed] (O)(0,0,-10)
 	%line [linewidth=.2pt,linecolor=blue,linestyle=dashed] (O)(0,-10,0)
 	%line [linewidth=.2pt,linecolor=blue,linestyle=dashed] (O)(-10,0,0)
-	special |\uput[r]#1{$x$}\uput[u]#2{$y$}\uput[l]#3{$z$}| (axis_x,0,0)(0,axis_y,0)(0,0,axis_z)
+	% this is for pstricks
+	%special |\uput[r]#1{$x$}\uput[u]#2{$y$}\uput[l]#3{$z$}| (axis_x,0,0)(0,axis_y,0)(0,0,axis_z)
+	% this is for tikz
+	special|\node[right] at #1 {$x$};|(axis_x,0,0)
+	special|\node[above] at #1 {$y$};|(0,axis_y,0)
+	special|\node[left] at #1 {$z$};|(0,0,axis_z)
 }
 
 def eye (7,4,10)
@@ -61,30 +66,36 @@ put { view((eye), (look_at)) } {
 	put { rotate(180, (0,h/2,0), [0,0,1]) then translate((p4)-(O)) } {bottle}
 	put { rotate(180, (0,h/2,0), [0,0,1]) then translate((p2)-(O)) } {bottle}
 
-	line [linewidth=.3pt,arrows=<->,linecolor=red] (p1)(p3) % diagonal 1
+	line [linewidth=.3pt,arrows=<->,linecolor=red,draw=red] (p1)(p3) % diagonal 1
 	def mid1 ((p1)-(O)+(p3)-(O))/2+(O)
-	special |\uput[u]#1{$d$}| (mid1)
+	%special |\uput[u]#1{$d$}| (mid1)
+	special|\node[above,color=red] at #1 {$d$};|(mid1)
 
-	line [linewidth=.3pt,arrows=<->,linecolor=red] (p2)(p4) % diagonal 2
+	line [linewidth=.3pt,arrows=<->,linecolor=red,draw=red] (p2)(p4) % diagonal 2
 	def mid2 ((p2)-(O)+(p4)-(O))/2+(O)
-	special |\uput[u]#1{$d$}| (mid2)
+	%special |\uput[u]#1{$d$}| (mid2)
+	special|\node[above,color=red] at #1 {$d$};|(mid2)
 
-	line [linewidth=.3pt,arrows=<->,linecolor=red] (p1)(p2)
+	line [linewidth=.3pt,arrows=<->,linecolor=red,draw=red] (p1)(p2)
 	def mid3 ((p1)-(O)+(p2)-(O))/2+(O)
-	special |\uput[u]#1{$d$}| (mid3)
+	%special |\uput[u]#1{$d$}| (mid3)
+	special|\node[above,color=red] at #1 {$d$};|(mid3)
 
-	line [linewidth=.3pt,arrows=<->,linecolor=red] (p2)(p3)
+	line [linewidth=.3pt,arrows=<->,linecolor=red,draw=red] (p2)(p3)
 	def mid4 ((p2)-(O)+(p3)-(O))/2+(O)
-	special |\uput[u]#1{$d$}| (mid4)
+	%special |\uput[u]#1{$d$}| (mid4)
+	special|\node[above,color=red] at #1 {$d$};|(mid4)
 
-	line [linewidth=.3pt,arrows=<->,linecolor=red] (p3)(p4)
+	line [linewidth=.3pt,arrows=<->,linecolor=red,draw=red] (p3)(p4)
 	def mid5 ((p3)-(O)+(p4)-(O))/2+(O)
-	special |\uput[u]#1{$d$}| (mid5)
+	%special |\uput[u]#1{$d$}| (mid5)
+	special|\node[above,color=red] at #1 {$d$};|(mid5)
 
-	line [linewidth=.3pt,arrows=<->,linecolor=red] (p4)(p1)
+	line [linewidth=.3pt,arrows=<->,linecolor=red,draw=red] (p4)(p1)
 	def mid6 ((p4)-(O)+(p1)-(O))/2+(O)
-	special |\uput[u]#1{$d$}| (mid6)
+	%special |\uput[u]#1{$d$}| (mid6)
+	special|\node[above,color=red] at #1 {$d$};|(mid6)
 }
 
 % we use pstricks and not tikz (had problems with tikz)
-%global { language tikz }
+global { language tikz }
